--- a/microV.ui
+++ b/microV.ui
@@ -31,7 +31,7 @@
         <enum>QTabWidget::West</enum>
        </property>
        <property name="currentIndex">
-        <number>2</number>
+        <number>3</number>
        </property>
        <widget class="QWidget" name="Laser">
         <attribute name="title">
@@ -53,8 +53,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>244</width>
-              <height>164</height>
+              <width>196</width>
+              <height>115</height>
              </rect>
             </property>
             <attribute name="label">
@@ -112,8 +112,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>294</width>
-              <height>159</height>
+              <width>255</width>
+              <height>121</height>
              </rect>
             </property>
             <attribute name="label">
@@ -184,8 +184,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>351</width>
-              <height>420</height>
+              <width>241</width>
+              <height>142</height>
              </rect>
             </property>
             <attribute name="label">
@@ -317,6 +317,13 @@
                </property>
               </widget>
              </item>
+             <item row="3" column="3">
+              <widget class="QPushButton" name="Pi_autoZero">
+               <property name="text">
+                <string>AutoZero</string>
+               </property>
+              </widget>
+             </item>
             </layout>
            </widget>
           </widget>
@@ -338,8 +345,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>265</width>
-              <height>178</height>
+              <width>225</width>
+              <height>122</height>
              </rect>
             </property>
             <attribute name="label">
@@ -443,8 +450,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>186</width>
-              <height>94</height>
+              <width>174</width>
+              <height>70</height>
              </rect>
             </property>
             <attribute name="label">
@@ -485,8 +492,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>351</width>
-              <height>335</height>
+              <width>356</width>
+              <height>396</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1170,6 +1177,16 @@
               </property>
              </widget>
             </item>
+            <item>
+             <widget class="QPushButton" name="fast3DScan">
+              <property name="text">
+               <string>FastScan</string>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
@@ -1376,7 +1393,7 @@
      <x>0</x>
      <y>0</y>
      <width>642</width>
-     <height>34</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
