--- a/microV.ui
+++ b/microV.ui
@@ -31,7 +31,7 @@
         <enum>QTabWidget::West</enum>
        </property>
        <property name="currentIndex">
-        <number>3</number>
+        <number>2</number>
        </property>
        <widget class="QWidget" name="Laser">
         <attribute name="title">
@@ -53,8 +53,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>196</width>
-              <height>115</height>
+              <width>244</width>
+              <height>164</height>
              </rect>
             </property>
             <attribute name="label">
@@ -112,8 +112,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>255</width>
-              <height>121</height>
+              <width>294</width>
+              <height>159</height>
              </rect>
             </property>
             <attribute name="label">
@@ -184,8 +184,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>241</width>
-              <height>142</height>
+              <width>351</width>
+              <height>420</height>
              </rect>
             </property>
             <attribute name="label">
@@ -345,8 +345,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>225</width>
-              <height>122</height>
+              <width>265</width>
+              <height>178</height>
              </rect>
             </property>
             <attribute name="label">
@@ -450,8 +450,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>174</width>
-              <height>70</height>
+              <width>186</width>
+              <height>94</height>
              </rect>
             </property>
             <attribute name="label">
@@ -491,9 +491,9 @@
             <property name="geometry">
              <rect>
               <x>0</x>
-              <y>0</y>
-              <width>356</width>
-              <height>396</height>
+              <y>-33</y>
+              <width>331</width>
+              <height>368</height>
              </rect>
             </property>
             <attribute name="label">
@@ -507,6 +507,13 @@
                </property>
                <property name="checkable">
                 <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="pico_set">
+               <property name="text">
+                <string>Set</string>
                </property>
               </widget>
              </item>
@@ -1393,7 +1400,7 @@
      <x>0</x>
      <y>0</y>
      <width>642</width>
-     <height>21</height>
+     <height>34</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
