--- a/microV.ui
+++ b/microV.ui
@@ -31,7 +31,7 @@
         <enum>QTabWidget::West</enum>
        </property>
        <property name="currentIndex">
-        <number>2</number>
+        <number>4</number>
        </property>
        <widget class="QWidget" name="Laser">
         <attribute name="title">
@@ -53,8 +53,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>244</width>
-              <height>164</height>
+              <width>196</width>
+              <height>115</height>
              </rect>
             </property>
             <attribute name="label">
@@ -112,8 +112,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>294</width>
-              <height>159</height>
+              <width>255</width>
+              <height>121</height>
              </rect>
             </property>
             <attribute name="label">
@@ -184,8 +184,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>351</width>
-              <height>420</height>
+              <width>356</width>
+              <height>457</height>
              </rect>
             </property>
             <attribute name="label">
@@ -345,8 +345,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>265</width>
-              <height>178</height>
+              <width>225</width>
+              <height>122</height>
              </rect>
             </property>
             <attribute name="label">
@@ -450,8 +450,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>186</width>
-              <height>94</height>
+              <width>174</width>
+              <height>70</height>
              </rect>
             </property>
             <attribute name="label">
@@ -491,9 +491,9 @@
             <property name="geometry">
              <rect>
               <x>0</x>
-              <y>-33</y>
-              <width>331</width>
-              <height>368</height>
+              <y>0</y>
+              <width>356</width>
+              <height>396</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1185,6 +1185,19 @@
              </widget>
             </item>
             <item>
+             <widget class="QSpinBox" name="fastScan_n_captures">
+              <property name="minimum">
+               <number>2</number>
+              </property>
+              <property name="maximum">
+               <number>90000</number>
+              </property>
+              <property name="value">
+               <number>710</number>
+              </property>
+             </widget>
+            </item>
+            <item>
              <widget class="QPushButton" name="fast3DScan">
               <property name="text">
                <string>FastScan</string>
@@ -1400,7 +1413,7 @@
      <x>0</x>
      <y>0</y>
      <width>642</width>
-     <height>34</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
