--- a/microV.ui
+++ b/microV.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>642</width>
-    <height>621</height>
+    <width>966</width>
+    <height>827</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,7 +31,7 @@
         <enum>QTabWidget::West</enum>
        </property>
        <property name="currentIndex">
-        <number>1</number>
+        <number>2</number>
        </property>
        <widget class="QWidget" name="Laser">
         <attribute name="title">
@@ -53,8 +53,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>196</width>
-              <height>115</height>
+              <width>244</width>
+              <height>164</height>
              </rect>
             </property>
             <attribute name="label">
@@ -112,8 +112,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>255</width>
-              <height>121</height>
+              <width>294</width>
+              <height>159</height>
              </rect>
             </property>
             <attribute name="label">
@@ -184,8 +184,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>356</width>
-              <height>457</height>
+              <width>298</width>
+              <height>300</height>
              </rect>
             </property>
             <attribute name="label">
@@ -371,8 +371,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>229</width>
-              <height>122</height>
+              <width>265</width>
+              <height>178</height>
              </rect>
             </property>
             <attribute name="label">
@@ -476,8 +476,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>174</width>
-              <height>70</height>
+              <width>186</width>
+              <height>94</height>
              </rect>
             </property>
             <attribute name="label">
@@ -518,8 +518,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>356</width>
-              <height>396</height>
+              <width>351</width>
+              <height>541</height>
              </rect>
             </property>
             <attribute name="label">
@@ -574,56 +574,56 @@
                <item row="0" column="1">
                 <widget class="QComboBox" name="pico_ChA_VRange">
                  <property name="currentIndex">
-                  <number>9</number>
+                  <number>0</number>
                  </property>
                  <item>
                   <property name="text">
-                   <string>20 mV</string>
+                   <string>20mV</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>50 mV</string>
+                   <string>50mV</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>100 mV</string>
+                   <string>100mV</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>200 mV</string>
+                   <string>200mV</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>500 mV</string>
+                   <string>500mV</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>1 V</string>
+                   <string>1V</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>2 V</string>
+                   <string>2V</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>5 V</string>
+                   <string>5V</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>10 V</string>
+                   <string>10V</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>20 V</string>
+                   <string>20V</string>
                   </property>
                  </item>
                 </widget>
@@ -663,56 +663,56 @@
                <item row="1" column="1">
                 <widget class="QComboBox" name="pico_ChB_VRange">
                  <property name="currentIndex">
-                  <number>9</number>
+                  <number>0</number>
                  </property>
                  <item>
                   <property name="text">
-                   <string>20 mV</string>
+                   <string>20mV</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>50 mV</string>
+                   <string>50mV</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>100 mV</string>
+                   <string>100mV</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>200 mV</string>
+                   <string>200mV</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>500 mV</string>
+                   <string>500mV</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>1 V</string>
+                   <string>1V</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>2 V</string>
+                   <string>2V</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>5 V</string>
+                   <string>5V</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>10 V</string>
+                   <string>10V</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>20 V</string>
+                   <string>20V</string>
                   </property>
                  </item>
                 </widget>
@@ -806,6 +806,9 @@
                  <property name="decimals">
                   <number>3</number>
                  </property>
+                 <property name="minimum">
+                  <double>-99.000000000000000</double>
+                 </property>
                  <property name="value">
                   <double>0.020000000000000</double>
                  </property>
@@ -895,6 +898,20 @@
                  </property>
                  <property name="value">
                   <number>100</number>
+                 </property>
+                </widget>
+               </item>
+               <item row="3" column="0">
+                <widget class="QLineEdit" name="pico_pretrig">
+                 <property name="text">
+                  <string>0.0</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="0">
+                <widget class="QLabel" name="label_14">
+                 <property name="text">
+                  <string>pretrig., ms</string>
                  </property>
                 </widget>
                </item>
@@ -1438,8 +1455,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>642</width>
-     <height>21</height>
+     <width>966</width>
+     <height>34</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
