--- a/microV.ui
+++ b/microV.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>966</width>
-    <height>827</height>
+    <width>497</width>
+    <height>471</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,12 +31,101 @@
         <enum>QTabWidget::West</enum>
        </property>
        <property name="currentIndex">
-        <number>2</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="Laser">
         <attribute name="title">
          <string>Laser</string>
         </attribute>
+        <layout class="QGridLayout" name="gridLayout_11">
+         <item row="1" column="0" colspan="3">
+          <widget class="QPushButton" name="laserSetWavelength">
+           <property name="text">
+            <string>SET</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QDoubleSpinBox" name="laserPower_internal">
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_15">
+           <property name="text">
+            <string>Wavelength, nm</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="0">
+          <spacer name="verticalSpacer">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="3" column="2">
+          <widget class="QPushButton" name="laserSetShutter">
+           <property name="text">
+            <string>Open/Close</string>
+           </property>
+           <property name="checkable">
+            <bool>false</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QSpinBox" name="laserWavelength_to_set">
+           <property name="minimum">
+            <number>680</number>
+           </property>
+           <property name="maximum">
+            <number>1300</number>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_16">
+           <property name="text">
+            <string>Power(internal),W</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QCheckBox" name="laserShutter">
+           <property name="text">
+            <string>Shutter</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="2">
+          <widget class="QSpinBox" name="laserWavelength">
+           <property name="frame">
+            <bool>false</bool>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+           <property name="buttonSymbols">
+            <enum>QAbstractSpinBox::NoButtons</enum>
+           </property>
+           <property name="minimum">
+            <number>680</number>
+           </property>
+           <property name="maximum">
+            <number>1300</number>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
        <widget class="QWidget" name="Motion">
         <attribute name="title">
@@ -184,8 +273,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>241</width>
-              <height>197</height>
+              <width>356</width>
+              <height>307</height>
              </rect>
             </property>
             <attribute name="label">
@@ -518,8 +607,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>356</width>
-              <height>602</height>
+              <width>339</width>
+              <height>291</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1455,7 +1544,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>966</width>
+     <width>497</width>
      <height>21</height>
     </rect>
    </property>
