--- a/microV.ui
+++ b/microV.ui
@@ -201,8 +201,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>356</width>
-              <height>436</height>
+              <width>259</width>
+              <height>155</height>
              </rect>
             </property>
             <attribute name="label">
@@ -550,6 +550,15 @@
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
           <widget class="QToolBox" name="toolBox_2">
+           <property name="frameShape">
+            <enum>QFrame::NoFrame</enum>
+           </property>
+           <property name="frameShadow">
+            <enum>QFrame::Sunken</enum>
+           </property>
+           <property name="lineWidth">
+            <number>2</number>
+           </property>
            <property name="currentIndex">
             <number>3</number>
            </property>
@@ -1112,7 +1121,7 @@
               <x>0</x>
               <y>0</y>
               <width>356</width>
-              <height>375</height>
+              <height>348</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1314,9 +1323,9 @@
                  </widget>
                 </item>
                 <item row="2" column="1">
-                 <widget class="QPushButton" name="andorCameraGetBackground">
+                 <widget class="QPushButton" name="andorCameraGetBaseline">
                   <property name="text">
-                   <string>GetBackground</string>
+                   <string>GetBaseline</string>
                   </property>
                  </widget>
                 </item>
@@ -1332,6 +1341,80 @@
                 </item>
                </layout>
               </widget>
+             </item>
+            </layout>
+           </widget>
+           <widget class="QWidget" name="page_2">
+            <property name="geometry">
+             <rect>
+              <x>0</x>
+              <y>0</y>
+              <width>356</width>
+              <height>348</height>
+             </rect>
+            </property>
+            <attribute name="label">
+             <string>Thorlabs PM100</string>
+            </attribute>
+            <layout class="QFormLayout" name="formLayout_2">
+             <item row="0" column="0">
+              <widget class="QPushButton" name="pm100Connect">
+               <property name="text">
+                <string>Connect</string>
+               </property>
+               <property name="checkable">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <layout class="QVBoxLayout" name="verticalLayout_11">
+               <item>
+                <widget class="QLabel" name="label_21">
+                 <property name="text">
+                  <string>Average</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QSpinBox" name="pm100Average">
+                 <property name="minimum">
+                  <number>1</number>
+                 </property>
+                 <property name="maximum">
+                  <number>10000</number>
+                 </property>
+                 <property name="value">
+                  <number>100</number>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item row="2" column="0">
+              <widget class="QCheckBox" name="pm100Live">
+               <property name="text">
+                <string>Live</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <layout class="QHBoxLayout" name="horizontalLayout_13">
+               <item>
+                <widget class="QLabel" name="pm100Power">
+                 <property name="text">
+                  <string>nan</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_22">
+                 <property name="text">
+                  <string>W</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </item>
             </layout>
            </widget>
